--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 						<th class="th-sortable" data-sort="float" style="width: 15%">
 							<span class="th-sortable__text">Satış</span>
 						</th>
-						<th style="width: 10%">2023-07-15 21:00:43</th>
+						<!-- <th style="width: 10%">2023-07-15 21:00:43</th> -->
 					</tr>
 				</thead>
 				<tbody>
@@ -105,7 +105,7 @@
 						<th class="th-sortable" data-sort="float" style="width: 15%">
 							<span class="th-sortable__text">Satış</span>
 						</th>
-						<th style="width: 10%">2023-07-15 21:00:43</th>
+						<!-- <th style="width: 10%">2023-07-15 21:00:43</th> -->
 					</tr>
 				</thead>
 				<tbody>
