--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 						<th class="colspan font-size-medium font-bold" style="width: 30%;" colspan="2">
 							EUR
 						</th>
-						<th rowspan="2" style="width: 10%;">
+<!-- 						<th rowspan="2" style="width: 10%;">
 							Yeniləmə vaxtı
-						</th>
+	 -->					</th>
 					</tr>
 				</thead>
 			</table>    
@@ -83,9 +83,9 @@
 						<th class="colspan font-size-medium font-bold" style="width: 30%;" colspan="2">
 							GBP
 						</th>
-						<th rowspan="2" style="width: 10%;">
+		<!-- 				<th rowspan="2" style="width: 10%;">
 							Yeniləmə vaxtı
-						</th>
+		 -->				</th>
 					</tr>
 				</thead>
 			</table>    
